# polinoid

./: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src/assets/: index.css
src/components/: AddNewCardDialog.vue  DeleteTodoDialog.vue  EditTodoDialog.vue  Greet.vue  Header.vue  KanbanCard.vue  KanbanSection.vue  StatusSelect.vue  Tab.vue
src/components/ui/card/: Card.vue
src/components/ui/select/: SelectItem.vue
src/components/ui/toast/: use-toast.ts
src/controllers/: note.js  note.ts  todo.js  todo.ts
src/models/: note.ts  todo.ts
src/pages/: CreateNoteButton.vue  DeleteNoteDialog.vue  Kanban.vue  Notes.vue
src/state/pages/: kanban.ts  notes.ts
src/utils/: utils.ts
